Fix: Remove excessive vertical spacing between sections

--- a/src/index.css
+++ b/src/index.css
@@ -226,12 +226,14 @@ h4 { font-size: 24px; }
 /* Keynote Speakers Section */
 .speakers-section {
   background-color: var(--black);
-  padding: 40px 0 80px 0;
+  padding: 0 0 80px 0;
+  margin: 0;
 }
 
 .speakers-section h2 {
   color: var(--pink);
   margin-bottom: 64px;
+  margin-top: 40px;
   padding-left: 108px;
 }
 
